infrastructure/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-box-hivebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hivebox
  template:
    metadata:
      labels:
        app: hivebox
    spec:
      containers:
      - name: hivebox
        image: hive-box:v3
        # 🔑 This tells KinD to use the image you loaded locally
        imagePullPolicy: IfNotPresent 
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /version
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
