infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hive-box-service
spec:
  selector:
    app: hivebox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
